# traductor-scorm-manual

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  log-promts.md  manual.md  requirements.txt
.claude/: BACKLOG.md  CLAUDE.md  PRD.md  SESION_2025-11-26.md  SETUP_SUPABASE.md  STATUSLOG.md
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run_celery_worker.sh  test_supabase_connection.py
backend/app/: main.py
backend/app/api/v1/: auth.py  download.py  jobs.py  upload.py
backend/app/core/: auth.py  celery_app.py  config.py
backend/app/models/: scorm.py  translation.py
backend/app/services/: content_extractor.py  filename_normalizer.py  job_service.py  scorm_parser.py  scorm_rebuilder.py  storage.py  translation_service.py
backend/app/services/providers/: __init__.py  argos_provider.py  base.py  claude_provider.py  factory.py  google_provider.py
backend/app/tasks/: __init__.py  translation_tasks.py
backend/database/: README.md
backend/database/migrations/: 001_create_translation_jobs.sql  002_create_translation_cache.sql
backend/database/seed/: 001_sample_jobs.sql  002_sample_cache.sql
backend/tests/: conftest.py  test_auth_endpoints.py  test_content_extractor.py  test_download_endpoint.py  test_jobs_endpoint.py  test_scorm_parser.py  test_scorm_rebuilder.py  test_translation_service.py  test_translation_task.py  test_upload_endpoint.py
docs/: GUIA_USUARIO.md  SESSION_2025-11-27.md
docs/security/: API_SECURITY_AUDIT_REPORT.md  CONSOLIDATED_SECURITY_REPORT.md  EXECUTIVE_SUMMARY.md  FRONTEND_SECURITY_AUDIT.md  README.md  REMEDIATION_CODE_SAMPLES.md  SECURITY_CHECKLIST.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DownloadButtons.tsx  ErrorBoundary.tsx  FlagIcon.tsx  LanguageSelector.tsx  Layout.tsx  ProtectedRoute.tsx  TranslationProgress.tsx  UploadZone.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: History.tsx  Home.tsx  Login.tsx  Signup.tsx
frontend/src/services/: api.ts
frontend/src/types/: translation.ts
traductor-scorm-cli/: README.md  manual.md  requirements.txt  traductor.py
