[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traductor-scorm"
version = "0.1.0"
description = "API REST para traducir paquetes SCORM a múltiples idiomas usando IA"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ricardo", email = "ricardo@example.com"}
]

dependencies = [
    # FastAPI & Server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # SCORM Processing
    "lxml>=4.9.3",                  # XML parsing (imsmanifest.xml)
    "beautifulsoup4>=4.12.0",       # HTML parsing
    "html5lib>=1.1",                # HTML5 parser

    # File handling
    "python-multipart>=0.0.6",      # File uploads

    # AI Translation - Multiple providers
    "googletrans==4.0.0-rc1",       # Google Translate (free, online)
    "argostranslate>=1.9.0",        # Argos Translate (free, offline)
    "anthropic>=0.8.0",             # Claude API (paid, high quality)
    "openai>=1.6.0",                # OpenAI API (optional fallback)

    # Database & Storage
    "supabase>=2.3.0",              # Supabase client
    "psycopg2-binary>=2.9.9",       # PostgreSQL driver

    # Task Queue
    "celery>=5.3.4",                # Async task processing
    "redis>=5.0.1",                 # Redis client for Celery

    # Utilities
    "python-dotenv>=1.0.0",         # .env file support
    "httpx>=0.25.2",                # Async HTTP client
    "tenacity>=8.2.3",              # Retry logic with exponential backoff
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",                # For testing FastAPI

    # Code Quality
    "ruff>=0.1.8",                  # Linter & formatter (replaces flake8, black, isort)
    "mypy>=1.7.1",                  # Type checking

    # Development
    "ipython>=8.18.1",              # Better REPL
    "ipdb>=0.13.13",                # Debugger
]

[project.scripts]
traductor-api = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "lxml.*",
    "bs4.*",
    "googletrans.*",
    "argostranslate.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
